# bank-mcp

./: .gitattributes  .gitignore  CHANGES.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DECISIONS.md  SETUP.md
examples/: plaid_items.example.json
ops/: com.example.finance-daily.plist  deploy.sh
src/bank_mcp/: __init__.py  __main__.py  _logging.py  demo.py  finance_agent.py  mcp_server.py  money.py
src/bank_mcp/engines/: budget_scorer.py  cashflow_forecaster.py  dispute_agent.py  fee_fraud_scan.py  llm_matcher.py  receipt_scanner.py  recurring.py
src/bank_mcp/ingest/: plaid_bridge.py  plaid_link.py  safehttp.py  sync.py
src/bank_mcp/report/: _report_format.py  _report_sections.py  build_site.py  delivery.py  digest_templates.py  email_html.py
src/bank_mcp/report/web/: index.html
src/bank_mcp/report/web/assets/: currency.js
src/bank_mcp/store/: analytics.py  db.py  merchant_categorizer.py  obligation_registry.py  subscription_creep.py
src/finance_mcp/: finance_agent.py  mcp_server.py  money.py
src/finance_mcp/engines/: budget_scorer.py  cashflow_forecaster.py  dispute_agent.py  fee_fraud_scan.py  llm_matcher.py  receipt_scanner.py
src/finance_mcp/report/: _report_format.py  _report_styles.py  delivery.py  digest_templates.py
src/finance_mcp/store/: analytics.py  db.py  queries.sql  subscription_creep.py
tests/: test_analytics.py  test_budget_scorer.py  test_cashflow_forecaster.py  test_db.py  test_delivery.py  test_delivery_html.py  test_digest_templates.py  test_dispute_agent.py  test_fee_fraud_scan.py  test_finance_agent.py  test_llm_matcher.py  test_mcp_server.py  test_merchant_categorizer.py  test_money.py  test_obligation_registry.py  test_observability.py  test_plaid_bridge.py  test_receipt_scanner.py  test_recurring.py  test_safehttp.py  test_sync.py
