[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-mcp"
description = "A deterministic personal-finance analysis suite (stdlib-only; LLMs only narrate)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "finance.mcp contributors" }]
keywords = ["personal-finance", "plaid", "budgeting", "cash-flow"]
# Runtime dependencies: NONE. The suite runs on the Python standard library only.
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
finance-mcp = "finance_mcp.__main__:main"
finance-mcp-server = "finance_mcp.mcp_server:main"

[tool.setuptools.dynamic]
version = { attr = "finance_mcp.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"finance_mcp" = ["data/*.md", "data/*.json"]
"finance_mcp.store" = ["*.sql"]
"finance_mcp.report" = ["web/*.html", "web/assets/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
# A typed core with a passing gate, expanding outward (the engines are not yet typed).
# Checks these modules; imported-but-untyped modules are followed for types but not
# reported on, so the gate stays green while typing spreads.
python_version = "3.10"
files = [
    "src/finance_mcp/money.py",
    "src/finance_mcp/store/analytics.py",
    "src/finance_mcp/mcp_server.py",
]
follow_imports = "silent"
ignore_missing_imports = true

[tool.ruff.lint]
# Correctness-focused: pyflakes (unused/undefined/real errors) + syntax errors.
# Stylistic multi-statement rules (E701/E702) are intentionally not enforced —
# the HTTP handlers and a few hot loops use compact one-liners deliberately.
select = ["F", "E9"]
