[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bank-mcp"
description = "A deterministic personal-finance analysis suite (stdlib-only; LLMs only narrate)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "bank.mcp contributors" }]
keywords = ["personal-finance", "plaid", "budgeting", "cash-flow"]
# Runtime dependencies: NONE. The suite runs on the Python standard library only.
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
# Optional error tracking. The core stays zero-dependency; install this only if you
# want Sentry, and set SENTRY_DSN. Absent it, bank_mcp._logging.init_sentry() no-ops.
observability = ["sentry-sdk"]

[project.scripts]
bank-mcp = "bank_mcp.__main__:main"
bank-mcp-server = "bank_mcp.mcp_server:main"

[tool.setuptools.dynamic]
version = { attr = "bank_mcp.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"bank_mcp" = ["data/*.md", "data/*.json"]
"bank_mcp.store" = ["*.sql"]
"bank_mcp.report" = ["web/*.html", "web/assets/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
# Type-checks the whole package at default strictness (real type errors, not a
# missing-annotation crusade). The money/analytics/mcp_server core is fully annotated;
# the rest is checked for type correctness as annotations spread.
python_version = "3.10"
files = ["src/bank_mcp"]
ignore_missing_imports = true

[tool.ruff.lint]
# Correctness-focused: pyflakes (unused/undefined/real errors) + syntax errors.
# Stylistic multi-statement rules (E701/E702) are intentionally not enforced —
# the HTTP handlers and a few hot loops use compact one-liners deliberately.
select = ["F", "E9"]
